<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.winguys.googlegeocodingexample.MainActivity">

    <LinearLayout
        android:id="@+id/ll_geocoding_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_address_geocoding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geocoding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_title" />

            <TextView
                android:id="@+id/tv_geocoding_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/reverse_geocoding_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/ll_geocoding_container">

        <EditText
            android:id="@+id/et_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/latitude_hint" />

        <EditText
            android:id="@+id/et_lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/longitude_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_reverse_geocoding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reverse_geocoding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_title" />

            <TextView
                android:id="@+id/tv_reverse_geocoding_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
